--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   flutter_localizations:
     sdk: flutter
+  intl: ^0.18.1
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
