--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.1
+  qr_code_scanner: ^1.0.1
   timezone: ^0.9.2
 
 dev_dependencies:
