--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,12 @@ dependencies:
 
   flutter_localizations:
     sdk: flutter
+  image: ^4.1.3
+  image_picker: ^1.0.6
+  images_picker: ^1.2.11
   intl: ^0.18.1
   qr_code_scanner: ^1.0.1
+  scan: ^1.6.0
   timezone: ^0.9.2
 
 dev_dependencies:
