--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   qr_code_scanner: ^1.0.1
   scan: ^1.6.0
   timezone: ^0.9.2
+  google_maps_flutter: ^2.5.2
+  custom_date_range_picker: ^1.0.10
 
 dev_dependencies:
   flutter_test:
